ExerciseController.java ya permite la creación de nuevos ejercicios ExerciseDTO.java tiene cambios que reflejan esto, así como el cambio de Tags a una lista de Strings Creación de GlobalExceptionHandler.java para problemas globales de recursos duplicados (status 409) Creación de ExerciseMapper.java para el parseo en ExerciseController.java de exerciseDTO a Exercise EditableMethod.java posee ahora linea de inicio y linea de final del método Exercise.java ahora utiliza lista de Rule.java (creado nuevo) para las reglas Repositorios modificados para la creación de ejercicios nuevos Servicios actualizados, salvo ExerciseService que crea los nuevos ejercicios.